--- a/messaging/templates/messaging/home.html
+++ b/messaging/templates/messaging/home.html
@@ -279,7 +279,8 @@
 
 <div class="top-bar">
     <div class="top-left">
-        <div class="logo">DarkOrbit</div>
+        <div class="logo">UmbraChat
+        </div>
     </div>
     <div class="top-right">
         <div class="auth-buttons">
