added the about us section

--- a/messaging/templates/messaging/home.html
+++ b/messaging/templates/messaging/home.html
@@ -298,12 +298,8 @@
 
 <div class="bottom-bar">
     <div class="bottom-links">
-        <a href="#" class="bottom-link">About</a>
-        <a href="#" class="bottom-link">Features</a>
-        <a href="#" class="bottom-link">Security</a>
-        <a href="#" class="bottom-link">Privacy Policy</a>
-        <a href="#" class="bottom-link">Support</a>
-        <a href="#" class="bottom-link">Contact</a>
+        <a href="{% url 'about_us' %}" class="bottom-link">About us</a>
+        <a href="{% url 'privacy_policy' %}" class="bottom-link">Privacy Policy</a>
     </div>
 </div>
 
