--- a/messaging/templates/messaging/home.html
+++ b/messaging/templates/messaging/home.html
@@ -1,5 +1,5 @@
 {% extends 'messaging/base.html' %}
-{% block title %}DarkOrbit | Secure Messaging{% endblock %}
+{% block title %} Secure Messaging{% endblock %}
 {% block content %}
 <style>
     body {
